# PublishingTestQSTheory

./: README.md  README.rst  pyproject.toml
.github/workflows/: build_docs.yml
docs/helpers/: generate_versions.py
docs/source/: conf.py  first_steps.md  index.rst
docs/source/api/: all.rst
src/publishingtestqstheory/: __init__.py
